# chessnood

./: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml
docs/: HARDWARE.md  IDEAS.md  SETUP_PI.md  anleitung.html
hardware/: enclosure.scad
scripts/: 99-chessnut.rules  chessnood-update.sh  install_pi.sh
src/chessnood/: __init__.py  atomicio.py  cli.py  config.py  display.py  engine.py  game.py  health.py  indicators.py  logging_setup.py  runner.py  status.py  watchdog.py  web.py
src/chessnood/boards/: __init__.py  base.py  ble.py  mock.py  protocol.py  usb.py
systemd/: chessnood-update.service  chessnood-update.timer  chessnood-web.service  chessnood.service
tests/: test_atomicio.py  test_beep.py  test_board_base.py  test_cli.py  test_config.py  test_display.py  test_engine.py  test_game.py  test_guidance.py  test_health.py  test_protocol.py  test_runner.py  test_status.py  test_usb.py  test_watchdog.py  test_web.py
